--- a/VSUQSM/src/app/features/admin-layout/a-terminal-management/a-terminal-management.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-terminal-management/a-terminal-management.component.html
@@ -1,5 +1,5 @@
-<main class="flex flex-col">
-  <h1 class="text-4xl font-bold text-neutral-800 max-md:max-w-full">
+<main class="flex flex-col rounded-b-xl">
+  <h1 class="text-4xl font-bold text-neutral-800 max-md:max-w-full ">
     Terminal Management
   </h1>
   <img
@@ -32,7 +32,7 @@
         Accounting Office
       </button>
     </nav>
-    <div class="flex flex-col justify-center p-2.5 w-full bg-white rounded-none shadow-[0px_4px_4px_rgba(0,0,0,0.25)] max-md:max-w-full">
+    <div class="flex flex-col justify-center p-2.5 w-full bg-white rounded-none shadow-[0px_4px_4px_rgba(0,0,0,0.25)] max-md:max-w-full rounded-b-xl">
       <div class="flex flex-wrap gap-5 justify-center items-start w-full max-md:max-w-full">
         <div class="flex flex-col justify-center w-full max-md:max-w-full">
           <div class="flex gap-4 justify-center items-center max-md:max-w-full">
