time updates in real time

--- a/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
@@ -20,7 +20,7 @@
           <div class="grid grid-cols-1 md:grid-cols-3 gap-2 mt-2">
             <!-- Time and Date Widget -->
             <div class="flex items-center justify-between bg-neutral-800 text-white rounded-xl shadow-sm p-3">
-              <time class="text-2xl font-bold">09:03 AM</time>
+              <div class="date">{{ currentDate }}</div>
               <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/3bd0e49363aa81ccdd8af93c42caf4079228a9be701837c314c0450a22c2f753?placeholderIfAbsent=true&apiKey=f64b8ca6f281475cbe8b66b807b3c3ce" alt="Clock icon" class="w-[40px]" />
             </div>
 
