to be continued, file upload

--- a/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
@@ -16,7 +16,7 @@
         </div>
 
         <!-- Widgets Section -->
-        <div class="flex flex-col lg:w-3/5 w-full"> 
+        <div class="flex flex-col lg:w-3/5 w-full">
           <div class="grid grid-cols-1 md:grid-cols-3 gap-2 mt-2">
             <!-- Time and Date Widget -->
             <div class="flex items-center justify-between bg-neutral-800 text-white rounded-xl shadow-sm p-3">
@@ -52,15 +52,15 @@
           <div class="flex justify-around mt-3">
             <div class="text-center">
               <h4 class="text-4xl">Now serving</h4>
-              <p class="text-3xl mt-2">R3</p>
-              <p class="text-3xl mt-2">R2</p>
-              <p class="text-3xl mt-2">R1</p>
-            </div>
-            <div class="text-center">
-              <h4 class="text-4xl">Counter</h4>
               <p class="text-3xl mt-2">1</p>
               <p class="text-3xl mt-2">2</p>
               <p class="text-3xl mt-2">3</p>
+            </div>
+            <div class="text-center">
+              <h4 class="text-4xl">Counter</h4>
+              <p class="text-3xl mt-2">R1</p>
+              <p class="text-3xl mt-2">R2</p>
+              <p class="text-3xl mt-2">R3</p>
             </div>
           </div>
         </div>
@@ -73,9 +73,9 @@
       </div>
 
       <!-- Announcement Section with Scrolling Effect -->
-      <div class="relative bg-white text-xl font-bold text-lime-900 px-10 py-3 mt-6 overflow-hidden">
-        <div class="announcement-scroll">
-          Announcement - Important updates will be shared here. Stay tuned for more information.
+      <div class="bg-neutral-800 text-white py-2 px-4 rounded-lg mt-8">
+        <div class="marquee">
+          <div class="marquee-text">Announcement - Important updates will be shared here. Stay tuned for more information.</div>
         </div>
       </div>
     </div>
