--- a/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
@@ -5,11 +5,11 @@
                      'background-image': backgroundType === 'photo' && backgroundPhotoUrl ? 'url(' + backgroundPhotoUrl + ')' : 'none'}">
       <!-- Content Containers -->
       <div class="relative flex flex-col lg:flex-row gap-3 p-2 mt-4">
-        <!-- Registrar Info -->
+        <!-- Info -->
         <div class="flex flex-col lg:w-2/5 w-full">
           <div class="flex gap-3 items-center">
-            <img [src]="logoUrl" alt="Registrar logo" class="object-contain w-[80px] max-md:mt-4" />
-            <h2 class="text-xl font-bold bg-white border-2 border-neutral-800 text-neutral-800 rounded-2xl shadow-md px-3 py-2 max-md:px-2">Registrar</h2>
+            <img [src]="logoUrl" [alt]="tabName + ' logo'" class="object-contain w-[80px] max-md:mt-4" />
+            <h2 class="text-xl font-bold bg-white border-2 border-neutral-800 text-neutral-800 rounded-2xl shadow-md px-3 py-2 max-md:px-2">{{ tabName }}</h2>
           </div>
         </div>
 
