--- a/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
@@ -43,29 +43,29 @@
         </div>
       </div>
 
-      <!-- Now Serving and Video Section -->
-      <div class="relative flex flex-col lg:flex-row gap-5 mt-6 p-6">
-        <div class="bg-white border border-neutral-800 rounded-3xl p-5 lg:w-1/2 w-full shadow-lg">
-          <h3 class="text-2xl font-bold text-white bg-neutral-800 text-center rounded-lg py-3">Processing</h3>
-          <div class="flex justify-around mt-4">
-            <div class="text-center">
-              <h4 class="text-3xl">Now Serving</h4>
-              <ul class="list-none p-0 mt-2">
-                <li class="text-2xl">1</li>
-                <li class="text-2xl">2</li>
-                <li class="text-2xl">3</li>
-              </ul>
-            </div>
-            <div class="text-center">
-              <h4 class="text-3xl">Counter</h4>
-              <ul class="list-none p-0 mt-2">
-                <li class="text-2xl">R1</li>
-                <li class="text-2xl">R2</li>
-                <li class="text-2xl">R3</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+<!-- Now Serving and Video Section -->
+<div class="relative flex flex-col lg:flex-row gap-5 mt-6 p-6">
+  <div class="bg-white border border-neutral-800 rounded-3xl p-5 w-full" [ngClass]="{'lg:w-1/2': videoUrl}">
+    <h3 class="text-2xl font-bold text-white bg-neutral-800 text-center rounded-lg py-3">Processing</h3>
+    <div class="flex justify-around mt-4">
+      <div class="text-center">
+        <h4 class="text-3xl">Now Serving</h4>
+        <ul class="list-none p-0 mt-2">
+          <li class="text-2xl">1</li>
+          <li class="text-2xl">2</li>
+          <li class="text-2xl">3</li>
+        </ul>
+      </div>
+      <div class="text-center">
+        <h4 class="text-3xl">Counter</h4>
+        <ul class="list-none p-0 mt-2">
+          <li class="text-2xl">R1</li>
+          <li class="text-2xl">R2</li>
+          <li class="text-2xl">R3</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
         <!-- Video Section -->
         <div *ngIf="videoUrl" class="lg:w-1/2 w-full mt-4 lg:mt-0">
